refactor(ui): 优化设置界面等